# ytalk

./: README.md  pyproject.toml
Formula/: ytalk.rb
src/ytalk/: app.py
tests/: test_tui.py
